# protocol

./: .gitignore  Anchor.toml  CLAUDE.md  README.md  package.json  tailwind.config.ts
.claude/agents/: oxar-creative.md  oxar-twitter.md
.claude/commands/: angles.md  tweet.md
.github/workflows/: ci.yml  claude-review.yml  kora-allowlist-refresh.yml  kora-float-alert.yml  money-path-sim.yml
contracts/: .gitignore  Anchor.toml  CLAUDE.md  package.json
contracts/programs/oxar-protocol/: Cargo.toml
contracts/programs/oxar-protocol/src/: constants.rs  cpi_adapter.rs  error.rs  instructions.rs  lib.rs  state.rs
contracts/programs/oxar-protocol/src/instructions/: cancel_listing.rs  cancel_rule.rs  claim.rs  crank_nav.rs  create_rule.rs  deposit.rs  execute_rule.rs  group_deposit.rs  group_withdraw.rs  initialize_adapter_registry.rs  initialize_group_vault.rs  initialize_personal_vault.rs  initialize_vault.rs  join_group_vault.rs  leave_group_vault.rs  pause_adapter.rs  route_yield_deposit.rs  route_yield_init.rs  route_yield_withdraw.rs  setup_vault_pool.rs  whitelist_adapter.rs  withdraw.rs
contracts/scripts/: init-registry.ts  smoke-test.ts  whitelist-adapter.ts
contracts/tests/: adapter-registry.ts  (+1 more)
deck/: deck-1min.html  deck.html
docs/: CLAUDE.md  LICENSE  README.md
kora/: .env.example  .gitignore  Dockerfile  README.md  entrypoint.sh  kora.toml  railway.toml  signers.toml
radar/: .env.example  README.md  next.config.ts  package.json  tsconfig.json  vercel.json
scripts/: cli.ts
sdk/: CLAUDE.md  tsconfig.json
sdk-local/: package.json
src/: constants.ts  idl.json  index.ts  middleware.ts  pda.ts  program.ts  transactions.ts  types.ts
tests/: oxar-protocol.ts
web/: CLAUDE.md  README.md  eslint.config.mjs  next.config.ts  package.json  vitest.config.ts
yield-adapter-standard/: .gitignore  Anchor.toml  Cargo.toml  LICENSE  README.md  package.json
yield-adapter-standard/programs/dispatcher/: Cargo.toml
yield-adapter-standard/programs/dispatcher/src/: constants.rs  error.rs  events.rs  instructions.rs  lib.rs  routing.rs  state.rs
yield-adapter-standard/programs/dispatcher/src/instructions/: current_value.rs  deposit.rs  initialize_registry.rs  open_position.rs  pause_adapter.rs  whitelist_adapter.rs  withdraw.rs
yield-adapter-standard/programs/drift-if/: Cargo.toml
yield-adapter-standard/programs/drift-if/src/: drift_cpi.rs  lib.rs  state.rs
yield-adapter-standard/programs/drift-if/src/instructions/: adapter_current_value.rs  adapter_deposit.rs  adapter_initialize.rs  adapter_withdraw.rs
yield-adapter-standard/programs/jupiter-lp/: Cargo.toml
yield-adapter-standard/programs/jupiter-lp/src/: events.rs  jup_cpi.rs  lib.rs  state.rs
yield-adapter-standard/programs/jupiter-lp/src/instructions/: adapter_current_value.rs  adapter_deposit.rs  adapter_initialize.rs  adapter_withdraw.rs
yield-adapter-standard/programs/kamino-usdc/: Cargo.toml
yield-adapter-standard/programs/kamino-usdc/src/: events.rs  instructions.rs  klend_cpi.rs  lib.rs  state.rs
yield-adapter-standard/programs/kamino-usdc/src/instructions/: adapter_current_value.rs  adapter_deposit.rs  adapter_initialize.rs  adapter_withdraw.rs
yield-adapter-standard/programs/maple-syrup/: Cargo.toml
yield-adapter-standard/programs/maple-syrup/src/: instructions.rs  lib.rs  orca_cpi.rs  state.rs
yield-adapter-standard/programs/maple-syrup/src/instructions/: adapter_current_value.rs  adapter_deposit.rs  adapter_initialize.rs  adapter_withdraw.rs
yield-adapter-standard/programs/marginfi-usdc/: Cargo.toml
yield-adapter-standard/programs/marginfi-usdc/src/: lib.rs  marginfi_cpi.rs  state.rs
yield-adapter-standard/programs/marginfi-usdc/src/instructions/: adapter_current_value.rs  adapter_deposit.rs  adapter_initialize.rs  adapter_withdraw.rs
(+707 files in other folders)
